# contracts

./: .env.example  .gitignore  .gitmodules  README.md  echidnaconfig.yaml  foundry.toml  hardhat.config.js  package-lock.json  package.json
.github/workflows/: cli.yml  contracts.yml  echidna.yml
cli/: .example-env  Cargo.toml  lotus_lite_init.sh
cli/bindings/: Cargo.toml
cli/bindings/src/: lib.rs  payment_splitter.rs  payment_splitter_native_addr.rs  payout_factory.rs  payout_factory_native_addr.rs  payout_factory_test.rs  shared_types.rs  test_payment_splitter.rs
cli/extras/src/: signature.rs
cli/signer/src/: lib.rs
cli/src/: .env-example  commands.rs  db.rs  lib.rs  tests.rs  utils.rs
cli/tests/: integration_tests.rs  local_executor.rs
contract-scripts/: cargo.toml
contract-scripts/bindings/: Cargo.toml
contract-scripts/bindings/src/: lib.rs  payment_splitter.rs  payout_factory.rs
contract-scripts/contract-functions/: Cargo.toml
contract-scripts/contract-functions/src/: main.rs  utils.rs
script/: Deploy.sol  Payout.sol  hardhat_evaluator_deploy.js
src/: EvaluationFactory.sol  Evaluatoor.sol  Evaluator.sol  PaymentSplitter.sol  PaymentSplitterNativeAddr.sol  PayoutFactory.sol  PayoutFactoryNativeAddr.sol
test/: EvaluationFactory.t.sol  Evaluatoor.t.sol  Evaluator.t.sol  PaymentSplitter.t.sol  PaymentSplitterNativeAddr.t.sol  PayoutFactory.t.sol  PayoutFactoryNativeAddr.t.sol
test/echidna/: EvaluatorTest.sol  PaymentSplitterTest.sol  PayoutFactoryTest.sol
utility-scripts/: Cargo.toml
utility-scripts/functions/: Cargo.toml
utility-scripts/functions/src/: main.rs  utils.rs
