[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
contract-bindings = { path= "./bindings" }
clap = { version = "4.0.32", features = ["derive"] }
thiserror = "1.0.38"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, rev = 'ee5e3e52', features = ["abigen", "ledger"]  }
fevm-utils = { git = "https://github.com/filecoin-saturn/rs-fevm-utils", rev="5d3a75d6b718bd107e88cb56f558ee8a569d4bfb" }
tokio = { version = "1.17.0", features = ["macros"] }
serde = "1.0.152"
log = { version = "0.4.17" }
colog = { version = "1.1.0" }
csv = "1.2.0"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.7",  features = ["with-chrono-0_4", "with-uuid-0_8"] }
chrono = "0.4.23"
rust_decimal = { version = "1.28.1", features = ["db-tokio-postgres"] }
once_cell = "1.17.1"
