[package]
name = "contract-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract-bindings = { path= "../bindings" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
tokio = { version = "1.17.0", features = ["macros"] }
eyre = "0.6.6"
serde_json = "1.0.91"
serde = "1.0.152"